--- a/html/systeme solaire/systeme solaire.html
+++ b/html/systeme solaire/systeme solaire.html
@@ -16,7 +16,7 @@
                 <img src="../../image/chams.png" usemap="#image-map">
                 </div>
                 <map name="image-map">
-                        <area target="" alt="Soleil" title="Soleil" href="soleil.html" coords="70,70,65" shape="circle">
+                        <area target="" alt="Soleil" title="Soleil" href="Soleil.html" coords="70,70,65" shape="circle">
                 </map>
 
                 <!--SOLEIL-->
@@ -60,7 +60,7 @@
                 <!--JUPITER-->
                 <div class="planet planet-large"><img src="../../image/jupiter.png" usemap="#imag-map"> </div>
                 <map name="imag-map">
-                    <area target="" alt="Jupiter" title="Jupiter" href="jupiter.html" coords="49,50,40" shape="circle">
+                    <area target="" alt="Jupiter" title="Jupiter" href="Jupiter.html" coords="49,50,40" shape="circle">
                 </map>
                 <!--JUPITER-->
                 
